alter books.html

--- a/books.html
+++ b/books.html
@@ -7,10 +7,10 @@
 		<body>
 			<table>
 				<tr>
-					<th>Title</th>
-					<th>Author</th>
+					<th>title</th>
+					<th>author</th>
 					<th>ISBN-13</th>
-					<th>Pages</th>
+					<th>pages</th>
 				</tr>
 				<tr>
 					<td>Money and Growth: Selected Papers of Allyn Abbott Young (Routledge Studies in the History of Economics)</td>
